<resources>
    <string name="add_progress">Add Progress</string>
    <string name="active">Active(%s)</string>
    <string name="all">All</string>
    <string name="all_rights_reserved">All Rights Reserved, Chal LLC 2020</string>
    <string name="app_name">chal</string>
    <string name="add_caption">Add Caption</string>
    <string name="add_photo_later">Add Photo Later</string>
    <string name="active_challenges">Active</string>
    <string name="account">Account</string>
    <string name="already_have_a_account_text">Already have a account?</string>
    <string name="are_you_sure_you_you_want_to_discard_the_post">Are you sure you want to discard this post?</string>
    <string name="app_menu">App Menu</string>
    <string name="bio">Bio</string>
    <string name="bug_descrption">Bug Description</string>
    <string name="bug_report_title">Report A Bug</string>
    <string name="bug_priority_level">Bug Priority Level</string>
    <string name="bug_title">Bug Title</string>
    <string name="sample_challenge_title">Sample Challenge</string>
    <string name="can_not_upload_image_to_server">Can Not Upload Image To Server</string>
    <string name="cancel_and_discard_post">Cancel and Discard Post</string>
    <string name="category_fitness">Fitness</string>
    <string name="category_education">Education</string>
    <string name="category_travel">Education</string>
    <string name="challenges">Challenges</string>
    <string name="challenge_feed">Challenge Feed</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="challenge_description">A <b>new you begins here!</b> Browse through the different categories below to find the <b>#chal </b>journey that youd like to embark on.</string>
    <string name="chal_menu">Chal Menu</string>
    <string name="chat">Chat</string>
    <string name="cant_login_error">Can\'t find your account. Please try again or create a account!</string>
    <string name="click_to_refresh">Click to refresh</string>
    <string name="close">CLOSE</string>
    <string name="completed">Completed</string>
    <string name="completed_challenges">COMPLETED</string>
    <string name="clear_photo">Clear Photo</string>
    <string name="click_here_to_add_a_description"><u>Click Here</u> To Add A Description</string>
    <string name="click_me_to_take_a_picture">Click Me To Take A Picture</string>
    <string name="continue_creating">Continue</string>
    <string name="challenges_bottom_nav">Challenges</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="create">Create</string>
    <string name="days_completed">%d out of %d days completed</string>
    <string name="do_not_have_account">Don\'t Have A Account?</string>
    <string name="debug">Debug</string>
    <string-array name="debugOptions">
        <item>Warning</item>
        <item>Expired</item>
        <item>@string/debug_change_configuration</item>
    </string-array>
    <string name="debug_incorrect_password">Incorrect Password!</string>
    <string name="debug_change_configuration">•  Change App Configurations</string>
    <string name="debug_password_title">Please Enter Password In Order To Continue</string>
    <string name="discard_post_details">Clicking YES will discard your current post towards your challenge.</string>
    <string name="dev_email">nicholasrutherford121@gmail.com</string>
    <string name="cancel_and_discard_post_title">Discard Post</string>
    <string name="cancel_and_discard_post_message">Are you sure you want to discard this post?</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_first_name">Edit First Name</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="edit_my_profile_description">To <b>edit your profile, </b> edit the fields down below.</string>
    <string name="edit_username">Edit Username</string>
    <string name="email">Email</string>
    <string name="email_sent">Email Sent!</string>
    <string name="iv_error_content_description_debug_password">Image View for not the correct password debug mode error</string>
    <string name="error_cant_log_in">Unable To Log In </string>
    <string name="error_cant_create_account">Unable To Create Account</string>
    <string name="error_content_desc_creating_account">Error Creating Account</string>
    <string name="error_creating_create_account_fields">One of the require fields are incorrect. Press OK to try again.</string>
    <string name="error_creating_account_firebase">Error Creating Account. Please Check Your Internet Connection</string>
    <string name="error_login_no_account_associated_with_email">No account associated with this email. Please create an account for this email.</string>
    <string name="error_fields_are_not_correct_create_account">One of the fields are empty or do not meet our requirements. Please try again.</string>
    <string name="error_fields_are_not_correct_log_in">One of the fields if not both are empty, please check your email and password and try again.</string>
    <string name="error_fields_not_entered_login">Email and or password are not entered. Please check your email and password and try again.</string>
    <string name="error_no_internet_log_in">Please connect to internet in order to log into your account.</string>
    <string name="error_name">No name entered</string>
    <string name="error_username">No username entered</string>
    <string name="error_email">Email is not valid</string>
    <string name="error_email_entered">No email is entered</string>
    <string name="error_phone">Phone must not be more then 10 digits long.</string>
    <string name="error_phone_not_valid">Phone number not valid.</string>
    <string name="error_password">One capital letter and one number.</string>
    <string name="error_updating_data_title">Error Updating Data</string>
    <string name="error_updating_data_desc">Error updating your progress! Please press OK and try again!</string>
    <string name="first_name">First Name</string>
    <string name="header_font_bold_text_title">Header Bold Font</string>
    <string name="hex_black">#000000</string>
    <string name="hex_white">#FFFFFF</string>
    <string name="high">High</string>
    <string name="issue_uploading_image_to_server">Issue uploading image to server. Please Try Again</string>
    <string name="last_updated">Last Updated</string>
    <string name="more_navigation">More</string>
    <string name="my_feed_bottom_nav">My Feed</string>
    <string name="search_navigation">SEARCH</string>
    <string name="fake_phone">414323312</string>
    <string name="filler_hash_tag_one"><u>#MuscleGains</u></string>
    <string name="filler_hash_tag_two"><u>#PushMyself</u></string>
    <string name="filler_hash_tag_three"><u>#Motiviation</u></string>
    <string name="find_friends">Find Friends</string>
    <string name="friends">Friends</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="full_name">Full Name</string>
    <string name="in_order_to_reset_password">in order to reset password</string>
    <string name="join_challenge"><u> Join Challenge!</u></string>
    <string name="join_a_challenge">Join A Challenge!</string>
    <string name="join_a_challenge_message">Are you ready to join the challenge? Enroll in any time bound challenge for a period of time, by posting progress of the challenge for 7 days! </string>
    <string-array name="listOfFonts">
        <item>@string/font_1</item>
        <item>@string/font_2</item>
        <item>@string/font_3</item>
        <item>@string/font_4</item>
        <item>@string/font_5</item>
        <item>@string/font_6</item>
        <item>@string/font_7</item>
        <item>@string/font_8</item>
        <item>@string/font_9</item>
        <item>@string/font_10</item>
        <item>@string/font_11</item>
        <item>@string/font_12</item>
        <item>@string/font_13</item>
        <item>@string/font_14</item>
    </string-array>
    <string-array name="listOfFontsLocations">
        <item>@string/font_1_location</item>
        <item>@string/font_2_location</item>
        <item>@string/font_3_location</item>
        <item>@string/font_4_location</item>
        <item>@string/font_5_location</item>
        <item>@string/font_6_location</item>
        <item>@string/font_7_location</item>
        <item>@string/font_8_location</item>
        <item>@string/font_9_location</item>
        <item>@string/font_10_location</item>
        <item>@string/font_11_location</item>
        <item>@string/font_12_location</item>
        <item>@string/font_13_location</item>
        <item>@string/font_14_location</item>
    </string-array>
    <string name="last_name">Last Name</string>
    <string name="log_out">Log out</string>
    <string name="looks_like_were_missing_caption">Looks like you are missing a caption. Please enter info for all fields, in order to post progress,</string>
    <string name="looks_like_were_missing_image">Looks like you are missing a image. Please enter info for all fields, in order to post progress,</string>
    <string name="looks_like_were_missing_data">Looks like were missing data. Please enter info for all fields, in order to continue.</string>
    <string name="loading">Loading</string>
    <string name="loading_account">Loading Your Account… </string>
    <string name="login_text">Log In</string>
    <string name="low">Low</string>
    <string name="name">Name</string>
    <string name="may_i_ask">May i ask for your phone number?</string>
    <string name="my_challenges">My Challenges</string>
    <string name="my_feed">My Feed</string>
    <string name="my_posts">My Posts</string>
    <string name="my_profile">My Profile</string>
    <string name="medium">Medium</string>
    <string name="missing_desc_message">Bug Missing Description</string>
    <string name="missing_desc_alert_message">Bug missing a description. Please add a description for the bug your reporting.</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="missing_title_message">Bug Missing Title</string>
    <string name="missing_title_desc_message">Bug missing a title. Please add a title for the bug your reporting.</string>
    <string name="news_feed">News Feed</string>
    <string name="no">No</string>
    <string name="not_enrolled_in_challenge">Not Enrolled In Challenge</string>
    <string name="not_enrolled_in_challenge_message">Currently you are not enrolled into any challenges! In order to upload progress, you must be enrolled in a challenge!</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="post_progress">Post Progress</string>
    <string name="post_progress_to_my_feed">Post Progress to My Feed</string>
    <string name="post_your_progress">Post Your Progress</string>
    <string name="post_your_progress_description">To <b>complete a challenge</b>, you must post an update to your page. It holds you accountable and counts towards your daily goal</string>
    <string name="please_check_email">Please Check Your Email</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="primary_logo_content_desc">Primary Logo For Chal.</string>
    <string name="reporter_name">Reporter Name</string>
    <string name="report_bug">Report Bug</string>
    <string name="sign_up_facebook_button_text">Continue With Facebook</string>
    <string name="sign_up_phone_button_text">Continue With Phone</string>
    <string name="sign_up_email_button_text">Continue With Email</string>
    <string name="social_media_instagram_content_desc">Social Media Icon Instagram</string>
    <string name="social_media_facebook_content_desc">Social Media Icon Facebook</string>
</resources>