<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/iv_close_height"
        android:layout_height="@dimen/iv_close_width"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDebugPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:padding="@dimen/padding_10dp"
        android:text="@string/debug_password_title"
        android:textAlignment="center"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose" />

    <EditText
        android:id="@+id/etDebugPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="17"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDebugPasswordTitle" />

    <Button
        android:id="@+id/btnDebugPassword"
        android:layout_width="@dimen/debug_password_button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_button"
        android:textSize="@dimen/header_text_size"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="@+id/etDebugPassword"
        app:layout_constraintStart_toStartOf="@+id/etDebugPassword"
        app:layout_constraintTop_toBottomOf="@+id/etDebugPassword" />

    <ImageView
        android:id="@+id/ivErrorPasswordDebug"
        android:layout_width="@dimen/iv_error_debug_password_height"
        android:layout_height="@dimen/iv_error_debug_password_width"
        android:background="@drawable/ic_error"
        android:layout_marginTop="@dimen/margin_30dp"
        android:contentDescription="@string/iv_error_content_description_debug_password"
        app:layout_constraintStart_toStartOf="@+id/btnDebugPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnDebugPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_incorrect_password"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginLeft="@dimen/margin_30dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivErrorPasswordDebug"
        app:layout_constraintStart_toEndOf="@+id/ivErrorPasswordDebug"
        app:layout_constraintTop_toTopOf="@+id/ivErrorPasswordDebug" />


</androidx.constraintlayout.widget.ConstraintLayout>