<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/padding_4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvChallengeFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_feed"
        android:textSize="@dimen/sub_header_text_size"
        android:padding="@dimen/padding_4dp"
        android:layout_marginTop="@dimen/margin_6dp"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginLeft="@dimen/margin_6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnAll"
        android:layout_width="@dimen/button_challenge_feed_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textSize="@dimen/body_text_size"
        android:text="@string/all"
        android:background="@drawable/corner_button_white"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/tvChallengeFeed"
        app:layout_constraintTop_toBottomOf="@+id/tvChallengeFeed"
        />

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="@dimen/button_challenge_feed_width"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginLeft="@dimen/margin_6dp"
        android:background="@drawable/corner_button"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="@dimen/body_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnAll"
        app:layout_constraintStart_toEndOf="@+id/btnAll"
        app:layout_constraintTop_toTopOf="@+id/btnAll"
        />

    <Button
        android:id="@+id/btnMyPosts"
        android:layout_width="@dimen/button_challenge_feed_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_6dp"
        android:text="@string/my_posts"
        android:background="@drawable/corner_button"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/margin_6dp"
        android:layout_marginLeft="@dimen/margin_6dp"
        android:textAllCaps="false"
        android:textSize="@dimen/body_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnFriends"
        app:layout_constraintStart_toEndOf="@+id/btnFriends"
        app:layout_constraintTop_toTopOf="@+id/btnFriends"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
