<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


<androidx.appcompat.widget.Toolbar
        android:id="@+id/tbForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivForgotPassword"
        android:layout_width="@dimen/iv_forgot_password_width"
        android:layout_height="@dimen/iv_forgot_password_height"
        android:background="@drawable/ic_forgot_password"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbForgotPassword" />

    <TextView
        android:id="@+id/tvForgotYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivForgotPassword" />

    <TextView
        android:id="@+id/tvPleaseEnterYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textSize="@dimen/sub_header_text_size"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tvForgotYourPassword"
        app:layout_constraintStart_toStartOf="@+id/tvForgotYourPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotYourPassword" />

    <TextView
        android:id="@+id/tvToResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_order_to_reset_password"
        android:layout_marginTop="@dimen/margin_4dp"
        android:textSize="@dimen/sub_header_text_size"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tvPleaseEnterYour"
        app:layout_constraintStart_toStartOf="@+id/tvPleaseEnterYour"
        app:layout_constraintTop_toBottomOf="@+id/tvPleaseEnterYour" />

    <Button
        android:id="@+id/btDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etTypeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_20dp"
        android:ems="15"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/email"
        android:windowSoftInputMode="adjustPan"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToResetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>