<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/padding_16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvBugReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_size"
        android:padding="@dimen/padding_10dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:text="@string/bug_report_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvReporterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reporter_name"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:padding="@dimen/padding_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBugReportTitle"
        android:layout_marginStart="@dimen/margin_10dp"
        />

    <Spinner
        android:id="@+id/spReporter"
        android:layout_width="@dimen/spinner_report_bug_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/tvReporterName"
        app:layout_constraintTop_toBottomOf="@+id/tvReporterName"
        />

    <TextView
        android:id="@+id/tvBugTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sub_header_text_size"
        android:text="@string/bug_title"
        android:textStyle="bold"
        android:padding="@dimen/padding_4dp"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="@+id/spReporter"
        app:layout_constraintTop_toBottomOf="@+id/spReporter"
        />

    <EditText
        android:id="@+id/etBugTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:ems="17"
        android:hint="@string/bug_title"
        android:autofillHints="@string/bug_title"
        android:imeOptions="actionDone"
        android:inputType="none"
        android:maxLines="1"
        android:singleLine="true"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintStart_toStartOf="@+id/tvBugTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBugTitle"
        />

    <TextView
        android:id="@+id/tvBugDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_descrption"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_20dp"
        android:padding="@dimen/padding_4dp"
        app:layout_constraintStart_toStartOf="@+id/etBugTitle"
        app:layout_constraintTop_toBottomOf="@+id/etBugTitle"
        />

    <EditText
        android:id="@+id/etBugDescription"
        android:layout_width="@dimen/spinner_report_bug_width"
        android:layout_height="wrap_content"
        android:ems="17"
        android:hint="@string/bug_descrption"
        android:layout_marginTop="@dimen/margin_10dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/tvBugDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvBugDescription"
        />

    <TextView
        android:id="@+id/tvBugPriorityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_priority_level"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_20dp"
        android:padding="@dimen/padding_4dp"
        app:layout_constraintStart_toStartOf="@+id/etBugDescription"
        app:layout_constraintTop_toBottomOf="@+id/etBugDescription"
        />

    <Spinner
        android:id="@+id/spPriorityLevel"
        android:layout_width="@dimen/spinner_report_bug_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="@+id/tvBugPriorityLevel"
        app:layout_constraintTop_toBottomOf="@+id/tvBugPriorityLevel"
        />

    <Button
        android:id="@+id/btnReportBug"
        android:layout_width="@dimen/button_report_bug_width"
        android:layout_height="wrap_content"
        android:text="@string/report_bug"
        android:gravity="center_horizontal"
        android:textSize="@dimen/sub_header_text_size"
        android:background="@drawable/corner_button"
        android:textColor="@color/colorSmokeWhite"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spPriorityLevel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>