<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSignInLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/iv_sign_in_height"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/chalappicon"
        android:contentDescription="@string/primary_logo_content_desc"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header_text_size"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/ivSignInLogo"
        app:layout_constraintStart_toStartOf="@+id/ivSignInLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivSignInLogo" />

    <TextView
        android:id="@+id/tvSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />

    <com.shaishavgandhi.loginbuttons.FacebookButton
        android:id="@+id/btnSignUpFacebook"
        android:layout_width="@dimen/button_sign_up_size"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_facebook_button_text"
        android:layout_marginTop="@dimen/margin_10dp"
        app:iconSize="@dimen/button_icon_size"
        app:layout_constraintEnd_toEndOf="@+id/tvSubHeader"
        app:layout_constraintStart_toStartOf="@+id/tvSubHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvSubHeader" />

    <Button
        android:id="@+id/btnSignUpPhone"
        android:layout_width="@dimen/button_sign_up_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:text="@string/sign_up_phone_button_text"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpFacebook"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpFacebook" />

    <Button
        android:id="@+id/btnSignUpRegular"
        android:layout_width="@dimen/button_sign_up_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:text="@string/sign_up_email_button_text"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpPhone"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpPhone"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpPhone" />

    <TextView
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_4dp"
        android:textAlignment="center"
        android:textSize="@dimen/sub_header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpRegular"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpRegular"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpRegular" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_4dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sub_header_text_size"
        android:layout_marginTop="@dimen/margin_10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintStart_toStartOf="@+id/tvAlreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvAlreadyHaveAccount" />

    <ImageView
        android:id="@+id/ivGram"
        android:layout_width="@dimen/iv_social_media_height"
        android:layout_height="@dimen/iv_social_media_width"
        android:background="@drawable/ic_instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        android:contentDescription="@string/social_media_instagram_content_desc"/>

    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="@dimen/iv_social_media_height"
        android:layout_height="@dimen/iv_social_media_width"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:background="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/ivGram"
        app:layout_constraintEnd_toStartOf="@+id/ivGram"
        app:layout_constraintTop_toTopOf="@+id/ivGram"
        android:contentDescription="@string/social_media_facebook_content_desc"/>

    <ImageView
        android:id="@+id/ivTwitter"
        android:layout_width="@dimen/iv_social_media_height"
        android:layout_height="@dimen/iv_social_media_width"
        android:layout_marginStart="@dimen/margin_30dp"
        android:background="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@+id/ivGram"
        app:layout_constraintStart_toEndOf="@+id/ivGram"
        app:layout_constraintTop_toTopOf="@+id/ivGram"
        android:contentDescription="@string/social_media_twitter_content_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>